ServiceMesh/service_mesh_demo_bundle/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: golden-signal
spec:
  hosts:
    - golden-signal.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: golden-signal
            subset: v1
          weight: 80
        - destination:
            host: golden-signal
            subset: v2
          weight: 20
